--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,8 @@
     <string name="app_name">Movie Catalogue</string>
     <string name="movie_name_example">The Girl in the Spider\'s Webstorm ft PHPStorm</string>
     <string name="movie_banner_content_description">Movie Banner</string>
-    <string name="movie_rate_text_example">4.5/5</string>
+    <string name="movie_rate_text_example">8.7</string>
+    <string name="movie_rate_text_basis">/10</string>
     <string name="rate_text">(%1$s/5)</string>
     <string name="release_year_example">2018</string>
     <string name="movie_overview_example">In Stockholm, Sweden, hacker Lisbeth Salander is hired by Frans Balder, a computer engineer, to retrieve a program that he believes it is too dangerous to exist.</string>
