--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,26 +14,26 @@
     <string name="tv_show_view_pager_label">TV Shows</string>
 
     <string name="movie_rate_text_example">8.7</string>
+    <string name="movie_vote_count_text_example">(1000 votesss)</string>
     <string name="movie_rate_text_basis">/10</string>
     <string name="movie_name_example">The Girl in the Spider\'s Webstorm ft PHPStorm</string>
     <string name="release_year_example">2018</string>
+    <string name="genres_example">Comedy, Action</string>
     <string name="revenue_example">$1,143,689,193.00</string>
     <string name="budget_example">$160,000,000.00</string>
     <string name="runtime_example">2h 24m</string>
     <string name="original_language_example">English</string>
     <string name="movie_overview_example">In Stockholm, Sweden, hacker Lisbeth Salander is hired by Frans Balder, a computer engineer, to retrieve a program that he believes it is too dangerous to exist.</string>
 
-    <string name="extra_data_movie">extra_data_movie</string>
-    <string name="extra_data_movie_title">extra_data_movie_title</string>
-    <string name="extra_data_movie_type">extra_data_movie_type</string>
+    <string name="extra_data_base_movie_id">extra_data_movie_id</string>
+    <string name="extra_data_base_movie_title">extra_data_movie_title</string>
+    <string name="extra_data_base_movie_type">extra_data_movie_type</string>
 
     <string name="status_continued">Continue</string>
-    <string name="status_ended">Ended</string>
     <string name="no_movie_title">No Movie Found</string>
     <string name="dash">-</string>
-
-    <string-array name="tv_show_status_text">
-        <item>@string/status_continued</item>
-        <item>@string/status_ended</item>
-    </string-array>
+    <string name="text_with_bracket">(%1$s)</string>
+    <string name="runtime_format">%1$d minutes</string>
+    <string name="vote_count_text">(%1$d votes)</string>
+    <string name="failure_get_base_movie_message">Aww, I failed to get movies for you. Pull to try again\n(Server in trouble)</string>
 </resources>
