--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,8 @@
     <string name="change_language_settings">Change Language Settings</string>
 
     <string name="movie_view_pager_label">Movies</string>
-    <string name="tv_show_view_pager_label">TV Shows</string>
+    <string name="tv_show_view_pager_label">TV Series</string>
+    <string name="favorite_view_pager_label">Favorite</string>
 
     <plurals name="runtime_format">
         <item quantity="one">%d minute</item>
