--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Katalog Film</string>
+    <string name="setting_title">Pengaturan</string>
     <string name="movie_banner_content_description">Poster Film</string>
     <string name="fact_label">Fakta Seru!</string>
     <string name="budget_label">Biaya</string>
@@ -7,7 +8,7 @@
     <string name="runtime_label">Durasi</string>
     <string name="status_label">Status</string>
     <string name="original_language_label">Bahasa Asli</string>
-    <string name="change_language_settings">Ubah Pengaturan Bahasa</string>
+    <string name="menu_settings">Pengaturan</string>
     <plurals name="runtime_format">
         <item quantity="other">%d menit</item>
     </plurals>
@@ -24,4 +25,13 @@
     <string name="failure_get_base_movie_message">Wadidow, Saya gagal dapetin film-nya. Tarik ke bawah buat nyoba lagi\n(Server dalam masalah)</string>
     <string name="status_continued">Masih Tayang</string>
     <string name="dash">-</string>
+
+    <string name="language_pref_category">Bahasa</string>
+    <string name="language_pref_title">🇮🇩 \tBahasa Indonesia</string>
+    <string name="reminder_notification_pref_category">Notifikasi</string>
+    <string name="daily_reminder_pref_title">Pengingat Harian</string>
+    <string name="daily_reminder_pref_summary">Dapatkan pengingat harian guna mengecek aplikasi ini</string>
+
+    <string name="release_reminder_pref_title">Info Film Rilis</string>
+    <string name="release_reminder_pref_summary">Dapatkan notifikasi film yang baru saja rilis</string>
 </resources>
